# hls-assertion-failure-example

./: Dockerfile  component.cabal  hie.yaml  package.yaml  stack.yaml
app/: Main.hs
src/: SomePlugin.hs
