cabal-version: 1.12

name:           component
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      SomePlugin
  hs-source-dirs:
      src/
  build-depends:
      base
    , ghc
  default-language: Haskell2010

executable component
  main-is: Main.hs
  hs-source-dirs:
      app/
  ghc-options: -fobject-code
  build-depends:
      base
    , component
    , ghc
  default-language: Haskell2010
